<resources>
    <string name="app_name">StatisticCovid</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="overview">overview</string>
    <string name="countries">countries</string>
    <string name="new_confirmed">New Confirmed</string>
    <string name="new_confirmed_value">18.365.565</string>
    <string name="country">Country</string>
    <string name="favorite">favorite</string>
    <string name="slug">Slug</string>
    <string name="code">code</string>
    <string name="total">Total Confirmed</string>
    <string name="total_deaths">New Deaths</string>
    <string name="total_deaths_label">Total deaths</string>
    <string name="new_recovered">New recovered</string>
    <string name="total_confirmed">Total Confirmed</string>
    <string name="new_deaths">New Deaths</string>
    <string name="new_recovered_label">New Recovered</string>
    <string name="total_recovered_label">Total Recovered</string>
    <string name="code_country">CODE_COUNTRY</string>
    <string name="code_language">CODE_LANGUAGE</string>
    <string name="total_recovered">Total recovered</string>
    <string name="preference_key">PREFERENCE_KEY</string>
    <string name="attention">ATTENTION</string>
    <string name="alert">There is no favorite country</string>
    <string name="message_alert">go to the list and select a country</string>
    <string name="search">search</string>
    <string name="language">language</string>
    <string name="title_overview">Covid-19 in World</string>
    <string name="details">Details</string>
    <string name="lang_br">português-br</string>
    <string name="lan_english">english</string>


</resources>