<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/overViewFragment">

    <fragment
        android:id="@+id/overViewFragment"
        android:name="br.itbam.statisticcovid.views.fragments.OverViewFragment"
        android:label="@string/title_overview"
        tools:layout="@layout/fragment_over_view" />
    <fragment
        android:id="@+id/countriesFragment"
        android:name="br.itbam.statisticcovid.views.fragments.CountriesFragment"
        android:label="@string/countries"
        tools:layout="@layout/fragment_countries" >
        <action
            android:id="@+id/action_countriesFragment_to_detailsFragment"
            app:destination="@id/detailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/detailsFragment"
        android:name="br.itbam.statisticcovid.views.fragments.DetailsFragment"
        android:label="@string/details"
        tools:layout="@layout/fragment_details" >
        <argument
            app:nullable="true"
            android:defaultValue="@null"
            app:argType="br.itbam.statisticcovid.data.Country"
            android:name="country" />
    </fragment>
</navigation>